# 2025_I_AV_COM_CLIENT

./: CMakeLists.txt  README.md
inc/: CM4UART.h  PacketID.h  Packets.h  Payload.h  SetpointSelection.h  TeensyUART.h  UART.h  Vec3.h
inc/shared_types/: Payload.h  SetpointSelection.h  State.h  Vec3.h  VehicleInputs.h  VehicleOutputs.h
inc/uart/: CM4Driver.h  TeensyDriver.h  UARTDriver.h
src/: CM4UART.cpp  Payload.cpp  TeensyUART.cpp  UART.cpp
src/uart/: CM4Driver.cpp  TeensyDriver.cpp  UARTDriver.cpp
tests/: CMakeLists.txt  test_receiving.cc  test_sending.cc
